# IotProject

HandGestureRecognition/: extractPic.py  gesture_model_gray_int8.tflite  gesture_model_mobilenetv2_gray_int8.tflite  gesture_model_mobilenetv2_int8.tflite  mini.py  showCutPic.py  testByPic.py  testByVideo.py  train.py  train_mobileNet.py  train_squeezeNet.py
HandGestureRecognition/logs/metrics/: events.out.tfevents.1732982229.lzhs-macbook-pro-2.local.40390.0.v2  events.out.tfevents.1732982704.lzhs-macbook-pro-2.local.40697.0.v2  events.out.tfevents.1732982810.lzhs-macbook-pro-2.local.40742.0.v2
HandGestureRecognition/logs/validation/: events.out.tfevents.1732982301.lzhs-macbook-pro-2.local.40390.2.v2  events.out.tfevents.1732982764.lzhs-macbook-pro-2.local.40697.2.v2  events.out.tfevents.1732982870.lzhs-macbook-pro-2.local.40742.2.v2
Python/: code.py  settings.toml
Python/lib/: mqtt_client.py
TheHub/: CMakeLists.txt  hubmanager.cpp  hubmanager.h  main.cpp  main.qml
